# schoolmospy

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: publish.yaml
.github/workflows/: publish.yml
api/events/: index.html
api/homeworks/: index.html
api/marks/: index.html
api/meals/: index.html
api/student_client/: index.html
docs/: exceptions.md  index.md  models.md  quickstart.md
docs/api/: entrances.md  events.md  gamification.md  homeworks.md  instant_messages.md  lesson_schedule.md  marks.md  meals.md  student_client.md
exceptions/: index.html
models/: index.html
quickstart/: index.html
schoolmospy/: __init__.py
schoolmospy/core/: basic_client.py  entrances_client.py  events_client.py  gamification_client.py  homeworks_client.py  instant_messages_client.py  lesson_schedule_client.py  marks_client.py  meals_client.py  student_client.py
schoolmospy/models/: events.py  gamification.py  homeworks.py  instant_messages.py  lesson_schedule_item.py  marks.py  meals.py  profile.py  userinfo.py  visit_durations.py
schoolmospy/utils/: exceptions.py
search/: search_index.json
