[project]
name = "schoolmospy"
version = "0.2.0"
description = "A lightweight async Python wrapper for school.mos.ru APIs"
authors = [{ name = "Ivan Kriventsev", email = "xd2dd@icloud.com" }]
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12"

keywords = ["school", "mos", "api", "education", "async", "wrapper", "python"]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp >=3.12.15,<4.0.0",
    "pydantic >=2.11.9,<3.0.0",
    "httpx (>=0.28.1,<0.29.0)",
]

packages = [{ include = "schoolmospy" }]

[project.urls]
"Homepage" = "https://github.com/xd2dd/schoolmospy"
"Documentation" = "https://xd2dd.github.io/schoolmospy"
"Issues" = "https://github.com/xd2dd/schoolmospy/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^6.0.1"
