[project]
name = "schoolmospy"
version = "0.2.3"
description = "A lightweight async Python wrapper for school.mos.ru APIs"
authors = [{ name = "Ivan Kriventsev", email = "xd2dd@icloud.com" }]
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12"

keywords = ["school", "mos", "api", "education", "async", "wrapper", "python"]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp >=3.12.15,<4.0.0",
    "pydantic >=2.11.9,<3.0.0",
    "httpx (>=0.28.1,<0.29.0)",
]

packages = [{ include = "schoolmospy" }]

[project.urls]
"Homepage" = "https://github.com/xd2dd/schoolmospy"
"Documentation" = "https://xd2dd.github.io/schoolmospy"
"Issues" = "https://github.com/xd2dd/schoolmospy/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^6.0.1"
pre-commit = "^4.0.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
]
ignore = [
    "ANN101",   # Missing type annotation for self in method
    "ANN102",   # Missing type annotation for cls in classmethod
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "TRY003",   # Avoid specifying long messages outside the exception class
    "EM101",    # Exception must not use a string literal
    "PLR2004",  # Magic value used in comparison
    "COM812",   # Trailing comma missing (conflicts with formatter)
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
